# boce

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  release.yml
src/: data.rs  filters.rs  gui.rs  install.rs  main.rs  paths.rs  prefs.rs  process.rs  profile.rs  shields.rs
