[package]
name = "brave-offline-config-editor"
version = "0.1.0"
edition = "2024"
description = "Offline editor for Brave browser configuration — cache, shields, privacy, filters, flags, and raw preferences. Runs while Brave is closed."

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
dirs = "5"
sysinfo = "0.32"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
anyhow = "1"
walkdir = "2"
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.29"
ctrlc = "3"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_System_Console", "Win32_UI_WindowsAndMessaging"] }
