[package]
name = "brave-offline-config-editor"
version = "0.1.3"
edition = "2024"
description = "Offline editor for Brave browser configuration — cache, shields, privacy, filters, flags, and raw preferences. Runs while Brave is closed."

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
dirs = "5"
sysinfo = "0.32"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
anyhow = "1"
walkdir = "2"
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.29"
ctrlc = "3"
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_System_Console"] }

[build-dependencies]
winresource = "0.1"

# Release profile tuned for a smaller, faster-starting binary. opt-level=3
# (speed) is kept because egui's rendering is measurably affected by "s"/"z"
# optimization levels.
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
